# devox-software-test-assignment

./: CMakeLists.txt  INSTRUCTIONS.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: common.hpp  connectionhandler.h  httpheader.hpp  httpparser.h  main.cpp  safequeue.h  server.cpp  server.h  urimapping.h
